# Mytest

./: build.gradle  config.gradle  settings.gradle
Business/bindertest/: build.gradle
Business/bindertest/src/main/: AndroidManifest.xml
Business/bindertest/src/main/res/layout/: activity_binder.xml
Business/contentprovidertest/: build.gradle
Business/contentprovidertest/src/main/: AndroidManifest.xml
Business/contentprovidertest/src/main/res/layout/: activity_content_provider.xml
Business/jmmactivity/: build.gradle
Business/jmmactivity/src/main/: AndroidManifest.xml
Business/jmmactivity/src/main/res/layout/: activity_jmm.xml
Business/jnitest/: build.gradle
Business/jnitest/libs/: thirdappmodule.aar
Business/jnitest/src/main/: AndroidManifest.xml
Business/jnitest/src/main/cpp/: CMakeLists.txt  hello-jni.c
Business/jnitest/src/main/cpp/tempFile/: hello-jni.c
Business/littletest/: build.gradle
Business/littletest/src/main/: AndroidManifest.xml
Business/pluginactivity/src/main/: AndroidManifest.xml
Business/shakedemo/: build.gradle
Business/shakedemo/src/main/: AndroidManifest.xml
Business/sockettest/: build.gradle
Business/sockettest/src/main/: AndroidManifest.xml
Business/xposedtest/: build.gradle
Business/xposedtest/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  recycle_item.xml
app/src/main/res/values/: colors.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
lib/baseactivity/src/main/: AndroidManifest.xml
(+99 files in other folders)
