cmake_minimum_required(VERSION 3.4.1)

# ------------------------------------------------ 下面的代码可以编译c文件引用，如果用so库的话则不用下面的代码
#add_library(hello-jni SHARED
#        hello-jni.c)

# Include libraries needed for hello-jni lib
#target_link_libraries(hello-jni
#        android
#        log)
# ------------------------------------------------